// Proto file for our gRPC service

syntax = "proto3";

package integrator;

// exported interface
service Integrator {
  // Estimate the integral of the given single term polynomial at the given
  // interval.
  //
  // Accepts a message that defines the polynomial and the integral config.
  // Returns the estimated value of the area under the curve.
  rpc SingleTermPolynomialIntegral(Query) returns (IntegralEstimate) {}
}

// Compound query message
message Query {
  STPolynomial poly = 1;
  IntegralConfig conf = 2;
}

// Estimated integral return message
message IntegralEstimate {
  double result = 1;
}

// Single term polynomials are defined by their constants. I.e., -5x^3-43 is
// actually -5x^3+0x^2+0x^1-43X^0, which this message expresses as {Constants:
// []int32{-5, 0, 0, -43}}
message STPolynomial {
  repeated sint32 constants = 1;
}

// Definit integral estimates are defined by the amount of strips we create
// under the curve and the start and end of the interval we measure the area
// of.
message IntegralConfig {
  int64 numStrips = 1;
  double start = 2;
  double end = 3;
}

